@@ -6,6 +6,7 @@ Instruct browser not to send referrer.
 Enable image embedding without cookies as there is no more risk of session leakage.
 Allow configuring password and nickname regex
 Prevent browser from caching at all.
+Add external CSS setting for large stylesheets
 
 Version 1.20.6 - Jul. 23, 2016
 Simplify ignore logic + disallow ignoring chatters with higher status
